Updates to fix jump menu
author: diane fleming

--- a/src/main/resources/apiref/css/main.css
+++ b/src/main/resources/apiref/css/main.css
@@ -376,7 +376,7 @@ a.button:active, input.action:active {
 	background: -webkit-gradient(linear, left top, left bottom, from(#bebebe), to(#dddddd));
 	background: -moz-linear-gradient(top,  #bebebe,  #eeeeee);	
 	-webkit-transition:none;
-	padding: 4px 29px 2px 31px!important;
+	padding: 4px 29px 2px 31px !important;
 }
 
 
@@ -391,7 +391,6 @@ a.roundedButton {
 	color: black;
 	text-decoration: none;
 	font-size: 12.5px;
-	text-transform: ;
 	line-height: 3em;
 	background: #FFFFFF; /* old browsers */
 	background: -moz-linear-gradient(top, #FFFFFF 0%, #F3F3F3 50%, #EBEBEB 100%); /* firefox */
